Upgraded for the new system

--- a/back-end/src/main/resources/application.properties
+++ b/back-end/src/main/resources/application.properties
@@ -1,15 +1,20 @@
 #Application Properties
-tedu-scheduler.url=https://www.teduscheduler.tk/api
-tedu-scheduler.course.url=https://www.tedu.edu.tr/tr/courses-offered
+tedu-scheduler.url=https://t.emreoyun.tk:8124/api
+tedu-scheduler.course.url=https://www.tedu.edu.tr/acilan-dersler
 tedu-scheduler.fetch-secret-key=secretKey
-server.port=8081
+server.port=8124
+
+#SSL Configuration (remove the comments to enable SSL)
+#server.ssl.key-store=server.pfx
+#server.ssl.key-store-password=pfxKey
+#server.ssl.keyStoreType=PKCS12
 
 #PostgreSQL
 spring.jpa.show-sql=false
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.initialization-mode=always
-spring.datasource.platform=postgres
-spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.platform=mysql
+spring.datasource.url=jdbc:mysql://localhost:3306/testing
 spring.datasource.username=username
 spring.datasource.password=secretKey
 
