--- a/front-end/package.json
+++ b/front-end/package.json
@@ -3,9 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/styled": "^11.10.4",
     "@material-ui/core": "^4.12.1",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.60",
+    "@mui/icons-material": "^5.10.3",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
@@ -20,6 +22,7 @@
   },
   "scripts": {
     "start": "react-scripts --openssl-legacy-provider start",
+    "buildwin": "react-scripts build",
     "build": "REACT_APP_PROD=1 react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
